[project]
name = "awesome-ai-agents"
version = "0.1.0"
description = "A curated collection of open-source AI agents built with LangGraph v1 for learning and experimentation."
readme = "README.md"
authors = [
    { name = "Lokeswaran Aruljothy", email = "lokeswaranaruljothy@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.7.1",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "youtube-transcript-api>=1.2.3",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.7",
]
